# zomato-DINEWISE

./: .env.example  .gitignore  README.md  architecture.md  context.md  edge-cases.md  implementation.md  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
data/processed/: restaurants.parquet
docs/: deployment-plan.md
scripts/: run_tests.ps1  smoke_filter.py  smoke_llm.py
src/: __init__.py  config.py
src/app/: ui.py
src/data/: __init__.py  loader.py  preprocessor.py  repository.py  run_pipeline.py
src/llm/: __init__.py  client.py  parser.py
src/models/: __init__.py  preferences.py  recommendation.py  restaurant.py
src/services/: __init__.py  filter_service.py  merge.py  prompt_builder.py  recommendation_service.py
tests/: conftest.py  test_config.py  test_filter_service.py  test_llm_live.py  test_merge.py  test_parser.py  test_preprocessor.py  test_prompt_builder.py  test_recommendation_service.py  test_repository.py
