[project]
name = "zomato-milestone"
version = "0.1.0"
description = "AI-powered restaurant recommendation system"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "streamlit>=1.28.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: live Gemini API tests"]
